[project]
name = "panda-common"
version = "0.1.0"
description = "Shared utilities and configuration for PandaFactor"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.6.0",
    "PyYAML>=6.0",
    "pymongo>=4.3.3",
    "redis>=4.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panda_common"]
