[project]
name = "panda-data"
version = "0.1.0"
description = "Data access layer for PandaFactor"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.2",
    "pymongo>=4.3.3",
    "redis>=4.5.4",
    "loguru>=0.6.0",
    "pandas>=2.0.0",
    "panda-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panda_data"]
