[project]
name = "panda-factor"
version = "0.1.0"
description = "Core factor calculation engine"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.3.3",
    "redis>=4.5.4",
    "loguru>=0.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.2",
    "scipy>=1.10.1",
    "statsmodels>=0.13.5",
    "panda-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panda_factor"]
