[project]
name = "panda-factor-server"
version = "0.1.0"
description = "FastAPI REST API server for PandaFactor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pymongo>=4.3.3",
    "pydantic>=1.10.7",
    "tqsdk>=3.2.10",
    "rqdatac>=2.9.0",
    "tqdm>=4.65.0",
    "redis>=4.5.4",
    "apscheduler>=3.10.1",
    "panda-common",
    "panda-data",
    "panda-factor",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
panda-factor-server = "panda_factor_server.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panda_factor_server"]
